--- a/tools/package.json
+++ b/tools/package.json
@@ -4,14 +4,18 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-      "test": "echo \"Error: no test specified\" && exit 1",
-      "start": "tsc-watch --onsuccess \"node dist/index.js\""
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "tsc-watch --onsuccess \"node dist/index.js\""
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/jest": "^26.0.10",
+    "jest": "^24.7.1",
+    "ts-jest": "^24.0.2",
     "tsc-watch": "^2.1.2",
+    "tslint": "^5.16.0",
     "typescript": "^3.5.1"
   }
 }
