[partial] Follow along for Chapter 9.
Up to "Using Literal Value Types" on page 220.

--- a/types/tsconfig.json
+++ b/types/tsconfig.json
@@ -5,6 +5,6 @@
         "rootDir": "./src",
         "declaration": true,
         "strictNullChecks": true,
-        "noImplicitReturns": true
+        // "noImplicitReturns": true
     }
 }
