[partial] Follow along for Chapter 10.
Up to "Type Guarding with a Type Predicate Function".

--- a/types/tsconfig.json
+++ b/types/tsconfig.json
@@ -5,6 +5,7 @@
         "rootDir": "./src",
         "declaration": true,
         "strictNullChecks": true,
+        "suppressExcessPropertyErrors": true,
         // "noImplicitReturns": true
     }
 }
