Follow along for Chapter 11.

--- a/types/tsconfig.json
+++ b/types/tsconfig.json
@@ -4,8 +4,8 @@
         "outDir": "./dist",
         "rootDir": "./src",
         "declaration": true,
-        "strictNullChecks": true,
-        "suppressExcessPropertyErrors": true,
+        // "strictNullChecks": true,
+        // "suppressExcessPropertyErrors": true,
         // "noImplicitReturns": true
     }
 }
